# xblend

./: .gitignore  Cargo.toml  README.md
src/: blend.rs  lib.rs  rgb.rs  rgba.rs
