[package]
name = "xcolor"
version = "0.1.0"
authors = ["xstater email:a166224@163.com"]
homepage = "https://crates.io/xcolor"
categories = ["computer-vision","graphics","multimedia","rendering::data-formats"]
license = "MIT"
keywords = ["color","graphics","RGB","RGBA","blend"]
repository = "https://github.com/xstater/xcolor"
readme = "README.md"
description = "A simple color library."
documentation = "https://docs.rs/xcolor/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "xcolor"
